# stripe_advanced_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
items/: admin.py  models.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_item_currency.py
items/templates/items/: base.html  item_detail.html  item_list.html
payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_rename_percentage_discount_percent_off.py  0003_discount_amount_alter_discount_percent_off.py  0004_rename_amount_discount_amount_off.py  0005_discount_currency.py  0006_remove_order_discount_order_discount.py  0007_remove_order_discount_order_discount.py  0008_remove_order_discount_order_discount.py  0009_rename_discount_order_discounts.py  0010_alter_order_discounts.py  0011_rename_rate_tax_percentage_tax_description_and_more.py  0012_remove_order_tax_order_tax_rates.py  0013_tax_country.py  0014_alter_discount_amount_off_alter_discount_currency_and_more.py
